--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,6 +46,8 @@ a {
 	--inverted-shadow: -3px -3px 4px #000000;
 
 	--player-height: 110px;
+	--navbar-height: 90px;
+	--navbar-margin: 15px;
 
 	--navbar-width: 200px;
 
